--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: rgb(170, 11, 37);
+  --primary-color-hover: rgb(114, 4, 22);
+  --primary-color-active: rgb(77, 7, 19);
+}
+
 html,
 body {
   margin: 0;
@@ -6,6 +12,7 @@ body {
   height: 100vh;
   max-height: 100vh;
   overflow: hidden;
+  color: white;
 }
 
 * {
@@ -38,11 +45,25 @@ body {
 main {
   position: relative;
   z-index: 0;
+  padding: 150px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "text aside";
+  gap: 50px;
+  height: 100%;
+}
+
+main > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  grid-area: text;
 }
 
 h1 {
   color: white;
-  margin-top: 10%;
   font-size: 5rem;
   display: flex;
   flex-direction: column;
@@ -55,4 +76,101 @@ h1 span:first-child {
 
 h1 span:last-child {
   font-family: "Heavitas", sans-serif;
+}
+
+.cinema {
+  color: white;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.cinema span {
+  font-weight: 700;
+}
+
+aside {
+  grid-area: aside;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+aside button {
+  padding: 15px;
+  font-size: 16px;
+  background-color: var(--primary-color);
+  border: none;
+  color: white;
+  font-family: "Prompt", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+aside button:hover {
+  background-color: var(--primary-color-hover);
+}
+
+aside button:active {
+  background-color: var(--primary-color-active);
+}
+
+.trailer {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.trailer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.trailer .overlay {
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.trailer:hover .overlay {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.trailer .short-text {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
+  transition: bottom 0.3s;
+}
+
+.trailer:hover .short-text {
+  bottom: -30px;
+}
+
+.play-icon {
+  height: 150px;
+  aspect-ratio: 1;
+  color: var(--primary-color);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 60%);
+  transition: transform 0.3s;
+}
+
+.trailer:hover .play-icon {
+  transform: translate(-50%, -50%);
+  transition: transform 0.3;
 }
