--- a/style.css
+++ b/style.css
@@ -2,13 +2,38 @@
   --primary-color: rgb(170, 11, 37);
   --primary-color-hover: rgb(114, 4, 22);
   --primary-color-active: rgb(77, 7, 19);
+  --primary-color-light: rgb(214, 37, 67);
+}
+
+/*
+* Chillax: https://www.fontshare.com/fonts/chillax
+*/
+
+@font-face {
+  font-family: "Heavitas";
+  src: url("assets/Heavitas.ttf");
+}
+
+@font-face {
+  font-family: "Chillax";
+  src: url("assets/Chillax-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Chillax";
+  src: url("assets/Chillax-Semibold.woff2") format("woff2");
+  font-weight: 600;
+  font-display: swap;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Prompt", sans-serif;
+  font-family: "Chillax", sans-serif;
   height: 100vh;
   max-height: 100vh;
   overflow: hidden;
@@ -19,11 +44,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-@font-face {
-  font-family: "Heavitas";
-  src: url("assets/Heavitas.ttf");
 }
 
 body {
@@ -71,21 +91,27 @@ h1 {
 }
 
 h1 span:first-child {
-  font-family: "Prompt", sans-serif;
+  font-family: "Chillax", sans-serif;
+  font-weight: 400;
 }
 
 h1 span:last-child {
   font-family: "Heavitas", sans-serif;
+  margin-top: -1.5rem;
+  font-kerning: none;
 }
 
 .cinema {
-  color: white;
+  color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
   font-size: 14px;
+  letter-spacing: 1px;
 }
 
 .cinema span {
-  font-weight: 700;
+  font-weight: 600;
+  color: white;
+  color: var(--primary-color-light);
 }
 
 aside {
@@ -100,22 +126,82 @@ aside button {
   padding: 15px;
   font-size: 16px;
   background-color: var(--primary-color);
+  background-color: transparent;
   border: none;
   color: white;
-  font-family: "Prompt", sans-serif;
+  font-family: "Chillax", sans-serif;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 2px;
   cursor: pointer;
   border-radius: 2px;
+  /* box-shadow: 0 0 50px 15px rgba(0, 0, 0, 1), 0 0 25px 5px rgba(0, 0, 0, 1); */
+  position: relative;
+  height: 80px;
 }
 
-aside button:hover {
-  background-color: var(--primary-color-hover);
+aside button svg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  fill: var(--primary-color);
+  height: 100%;
+  width: 100%;
 }
 
-aside button:active {
-  background-color: var(--primary-color-active);
+aside button svg path {
+  fill: none;
+}
+
+aside button svg .fill {
+  fill: var(--primary-color);
+}
+
+svg#button-scratched {
+  display: none;
+}
+
+aside button:hover svg#button-full {
+  display: none;
+}
+
+aside button:hover svg#button-scratched {
+  display: block;
+}
+
+aside button:hover svg .fill {
+  fill: var(--primary-color-hover);
+}
+
+aside button:active svg .fill {
+  fill: var(--primary-color-active);
+}
+
+aside button span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.actors {
+  flex: 1;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.5rem;
+  padding: 30px 0;
+}
+
+.actors ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.actors li {
+  text-shadow: 0 0 0.5rem black;
 }
 
 .trailer {
@@ -124,6 +210,7 @@ aside button:active {
   overflow: hidden;
   cursor: pointer;
   border-radius: 5px;
+  box-shadow: 0 0 50px 15px rgba(0, 0, 0, 1), 0 0 25px 5px rgba(0, 0, 0, 1);
 }
 
 .trailer img {
