--- a/style.css
+++ b/style.css
@@ -269,6 +269,22 @@ aside button span {
   }
 }
 
+@media (max-width: 1080px) {
+  main {
+    padding: 100px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 4fr;
+    grid-template-areas:
+      "text"
+      "aside";
+  }
+
+  .trailer {
+    width: 50%;
+    margin: auto;
+  }
+}
+
 @media (aspect-ratio: 4/3) {
   main {
     padding: 50px;
@@ -279,19 +295,14 @@ aside button span {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .vignette {
     pointer-events: none;
-    box-shadow: inset 0 0 220px 100px rgba(0, 0, 0, 1);
+    box-shadow: inset 0 0 220px 200px rgba(0, 0, 0, 1);
   }
 
   main {
     padding: 20px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr;
-    grid-template-areas:
-      "text"
-      "aside";
   }
 
   h1 {
@@ -300,6 +311,15 @@ aside button span {
 
   .trailer {
     width: 80%;
-    margin: auto;
+  }
+
+  .play-icon {
+    transform: translate(-50%, 100%);
+  }
+}
+
+@media (max-width: 600px) {
+  .vignette {
+    box-shadow: inset 0 0 180px 150px rgba(0, 0, 0, 1);
   }
 }
